--- a/.github/workflows/build-branch.yml
+++ b/.github/workflows/build-branch.yml
@@ -20,8 +20,8 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           deploy_alias: ${{ env.BRANCH_NAME }}
-          build_directory: .next
-          build_command: yarn build 
+          build_directory: '.next'
+          build_command: 'yarn build' 
       
       # Creates a status check with link to preview
       - name: Status check
